--- a/src/containers/Canvas/Test/TestSidebar.css
+++ b/src/containers/Canvas/Test/TestSidebar.css
@@ -94,6 +94,16 @@
   padding-right: 10px;
   padding-left: 20px !important;
   text-align: center;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%);
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%);
+  background-image: -o-linear-gradient(rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%);
+  background-image: linear-gradient(rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%);
+  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%);
 }
 
 .response-input {
